datetime picker, landing page fixes

--- a/render/index.tmpl.html
+++ b/render/index.tmpl.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>TSTP</title>
+  <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=3.0">
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
   <script src="//code.jquery.com/jquery-1.12.4.js"></script>
   <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -20,15 +21,28 @@
     <input id="to-name" placeholder="To" class="station-autocomplete" value="{{.To.Name}}" {{if ne .To.EvaNumber 0}}disabled{{end}}>
     <input type="hidden" name="to" id="to" value="{{.To.EvaNumber}}">
 </div>
+{{if .Stations}}
 <p>
     You need to give via stations. Only direct connections between these stations will be used for route planning.
 </p>
+{{end}}
 {{range $idx, $e := .Stations}}
 <div>
     <input id="via-{{$idx}}-name" placeholder="Via" class="station-autocomplete" value="{{$e.Name}}">
     <input type="hidden" name="vias" id="via-{{$idx}}" value="{{$e.EvaNumber}}">
 </div>
 {{end}}
+
+<div>
+    <input type="datetime-local" id="datetime" name="datetime" value="{{.DateTime}}">
+    <script>
+        if (document.getElementById('datetime').value == "") {
+            const now = new Date();
+            now.setMinutes(now.getMinutes() - now.getTimezoneOffset());
+            document.getElementById('datetime').value = now.toISOString().slice(0, -1);
+        }
+    </script>
+</div>
 
 
 <input type="submit" value="Submit">
