--- a/render/index.tmpl.html
+++ b/render/index.tmpl.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
   <script src="//code.jquery.com/jquery-1.12.4.js"></script>
   <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <script src="./res/conf.js"></script>
+  <script src="res/conf.js"></script>
 </head>
 <body>
 
@@ -36,13 +36,7 @@
 <div>
     <input type="datetime-local" id="datetime" name="datetime" value="{{.DateTime}}">
     <script>
-        if (document.getElementById('datetime').value == "") {
-            const now = new Date();
-            now.setMinutes(now.getMinutes() - now.getTimezoneOffset());
-            now.setSeconds(0);
-            now.setMilliseconds(0);
-            document.getElementById('datetime').value = now.toISOString().slice(0, -1);
-        }
+        
     </script>
 </div>
 
@@ -51,52 +45,7 @@
 
 </form>
  
-<script>
-    var stationMap = {};
-    $(".station-autocomplete").autocomplete({
-        source: function( request, response ) {
-            fetch(STATIONS_API + "?query="+request.term)
-            .then(response => response.json())
-            .then(data => {
-                console.log(data);
-                var list = Object.values(data).map(station => {
-                    console.log(station.name, station["name"]);
-                    stationMap[station.name] = station.id;
-                    return station.name;
-                });
-                console.log(list)
-                response(list);
-            });
-        }
-    });
-
-    function prepareSubmit() {
-        const inputs = document.getElementsByClassName('station-autocomplete');
-        for (var i=0;i<inputs.length;i++) {
-            if (!mapEvaNumber(inputs[i])) {
-                return false;
-            }
-        }
-        return true;
-    }
-
-    function mapEvaNumber(inputField) {
-        if (inputField.disabled) {
-            return true;
-        }
-        const evaNumber = stationMap[inputField.value];
-        const id = inputField.id.replace('-name', '');
-        if (evaNumber == undefined) {
-            if (id == 'from' || id == 'to') {
-                inputField.value = '';
-                return false
-            }
-            return true
-        }
-        document.getElementById(id).value = evaNumber;
-        return true;
-    }
-</script>
+<script src="res/index.js"></script>
  
 </body>
 </html>
