--- a/render/index.tmpl.html
+++ b/render/index.tmpl.html
@@ -16,7 +16,7 @@
     </head>
 <body>
 <div id="header"><div>
-    <a href="/tstp"><h1>TeSpace</h1></a>
+    <a href="/tstp"><h1>TeSpace<sup>BETA</sup></h1></a>
 </div></div>
 
 <div id="container">
