--- a/ui/src/app.html
+++ b/ui/src/app.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<!--<link href="%sveltekit.assets%/main.css" type="text/css" rel="stylesheet">-->
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
