--- a/ui/src/app.html
+++ b/ui/src/app.html
@@ -8,6 +8,9 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
+		<noscript>
+			JavaScript needs to be enabled to use this tool.
+		</noscript>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
