--- a/ui/src/app.html
+++ b/ui/src/app.html
@@ -2,8 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<!--<link href="%sveltekit.assets%/main.css" type="text/css" rel="stylesheet">-->
+		
+		<link href="%sveltekit.assets%/favicon.ico" type="image/x-icon" rel="shortcut icon">
+		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png">
+
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		%sveltekit.head%
 	</head>
