--- a/ui/src/app.html
+++ b/ui/src/app.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 	<head>
 		<meta charset="utf-8" />
-		
+
+		<title>TeSpace</title>
+
 		<link href="%sveltekit.assets%/favicon.ico" type="image/x-icon" rel="shortcut icon">
 		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png">
